--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "node src/cluster.js",
+    "start": "node -r dotenv/config src/cluster.js",
     "dev": "PRISMA_API_ENDPOINT=localhost yarn prisma deploy && NODE_ENV=development node src/index.js",
     "eslint": "eslint src/",
     "test": "PRISMA_API_ENDPOINT=localhost yarn prisma deploy && NODE_ENV=development jest --runInBand --coverage"
@@ -40,6 +40,7 @@
     "cluster": "^0.7.7",
     "codacy-coverage": "^3.4.0",
     "dotenv": "^6.2.0",
+    "env-cmd": "^10.0.1",
     "eslint": "^5.14.1",
     "express-jwt": "^5.3.1",
     "graphql": "^14.1.1",
