prisma deploy scritps

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "start": "node -r dotenv/config src/cluster.js",
     "dev": "PRISMA_API_ENDPOINT=localhost yarn prisma deploy && NODE_ENV=development node src/index.js",
+    "deploy-dev": "env-cmd -e development yarn prisma deploy",
+    "deploy-prod": "env-cmd -e production yarn prisma deploy",
     "eslint": "eslint src/",
     "test": "PRISMA_API_ENDPOINT=localhost yarn prisma deploy && NODE_ENV=development jest --runInBand --coverage"
   },
