--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,8 +1,8 @@
 
 
-endpoint: http://${env:PRISMA_API_ENDPOINT}:4466
+endpoint: ${env:PRISMA_API_ENDPOINT}
 datamodel: datamodel.graphql
-secret: ${PRISMA_SERVICE_SECRET}
+secret: ${env:PRISMA_SERVICE_SECRET}
 generate:
   - generator: graphql-schema
     output: ../src/generated/prisma.graphql
