--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ jest_*/
 
 # data volume for docker db volume
 postgres/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
