--- a/.ebextensions/03-nginx.config
+++ b/.ebextensions/03-nginx.config
@@ -61,7 +61,7 @@ files:
                if ($http_x_forwarded_proto != "https") {
                  set $redirect 1;
                }
-               if ($http_user_agent ~* "ELB-HealthChecker") {
+               if ($http_user_agent ~* "^ELB-HealthChecker\/.*$") {
                  set $redirect 0;
                }
                if ($redirect = 1) {
