--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "node -r dotenv/config src/cluster.js",
-    "dev": "PRISMA_API_ENDPOINT=localhost yarn prisma deploy && NODE_ENV=development node src/index.js",
+    "start": "NODE_ENV=production node -r dotenv/config src/cluster.js",
+    "dev": "NODE_ENV=development node src/index.js",
     "deploy-dev": "env-cmd -e development yarn prisma deploy",
     "deploy-prod": "env-cmd -e production yarn prisma deploy",
     "prisma-admin-prod": "env-cmd -e production yarn prisma token",
